# kb-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  UPGRADING.md
.github/workflows/: ci.yml
kb_citations/: README.md  pyproject.toml
kb_citations/src/kb_citations/: __init__.py  cache.py  cli.py  config.py  counts_writer.py  fetcher.py  linker.py  openalex.py  provider.py  resolver.py  semantic_scholar.py
kb_core/: README.md  pyproject.toml
kb_core/src/kb_core/: __init__.py  addressing.py  argtypes.py  format.py  frontmatter.py  paths.py  schema.py  workspace.py
kb_importer/: README.md  pyproject.toml
kb_importer/src/kb_importer/: __init__.py  __main__.py  cli.py  config.py  eligibility.py  events.py  fulltext.py  fulltext_writeback.py  import_lock.py  logging_util.py  longform.py  longform_split.py  md_builder.py  md_io.py  resummarize_adapter.py  safety.py  state.py  summarize.py  zotero_reader.py
kb_importer/src/kb_importer/commands/: __init__.py  _shared.py  import_cmd.py  import_fulltext.py  import_keys.py  import_pipeline.py  list_cmd.py  orphans_cmd.py  preflight_cmd.py  status_cmd.py  summary_cmd.py  sync_cmd.py
kb_importer/src/kb_importer/templates/: __init__.py  ai_summary_prompt.md
kb_mcp/: README.md  pyproject.toml
kb_mcp/src/kb_mcp/: __init__.py  __main__.py  _indexer_helpers.py  citation_ops.py  config.py  embedding.py  embedding_pass.py  indexer.py  link_extractor.py  link_resolve.py  paths.py  schema.sql  server.py  server_cli.py  stale_cleanup.py  store.py  workspace.py
kb_mcp/src/kb_mcp/tools/: __init__.py  agent_prefs.py  backlinks.py  citation_stats.py  find.py  grep.py  index_status.py  list.py  read.py  related.py  report.py  reverse_lookup.py  search_fts.py  search_graph.py  search_hybrid.py  similarity_prior.py  snapshot.py  trace_links.py  write_ops.py
kb_write/: README.md  pyproject.toml
kb_write/src/kb_write/: AGENT-WRITE-RULES.md  __init__.py  atomic.py  audit.py  cli.py  config.py  diff.py  frontmatter.py  git.py  paths.py  reindex.py  rules.py  safety.py  workspace.py  zones.py
kb_write/src/kb_write/commands/: __init__.py  _shared.py  admin_cmd.py  batch_cmd.py  field_cmd.py  init_cmd.py  migrate_cmd.py  node_cmd.py  pref_cmd.py  zone_cmd.py
kb_write/src/kb_write/ops/: __init__.py  ai_zone.py  delete.py  doctor.py  init.py  migrate_chapters.py  migrate_slugs.py  preference.py  re_read.py  re_read_sources.py  re_summarize.py  ref.py  tag.py  thought.py  topic.py
kb_write/src/kb_write/prompts/: renderer.py
kb_write/src/kb_write/prompts/fragments/: citation_workflow.md  cross_platform.md  directory_map.md  discovery.md  installation.md  prefs_handling.md  search_hint.md  workspace_layout.md  write_workflow.md
kb_write/src/kb_write/scaffold/: agent_prefs_README.md  claude_settings.json  config_README.md  config_kb_citations.yaml  config_kb_importer.yaml  config_kb_mcp.yaml  gitignore
kb_write/src/kb_write/selectors/: __init__.py  base.py  by_tag.py  never_summarized.py  oldest_summary.py  random_sel.py  registry.py  related_to_recent.py  stale_first.py  unread_first.py
scripts/: README.md  check_cross_module_imports.py  check_docs_sync.py  check_no_secrets.py  check_no_system_paths.py  check_package_consistency.py  deploy.sh  make_release.sh  post_install_test.py  pre_release_full_check.sh  run_unit_tests.py  test_e2e.py
tests/: conftest.py
tests/unit/: test_addressing.py  test_atomic_write.py  test_audit.py  test_audit_user_fallback.py  test_auto_commit_pathspec.py  test_bad_request_classification.py  test_children_fetch_failure.py  test_circuit_breaker.py  test_citations_linker_atomic.py  test_citations_yaml_precedence.py  test_config_section_types.py  test_config_validation.py  test_count_papers_whole_work.py  test_dangling_promotion.py  test_doctor_fix.py  test_embedding_dim_mismatch.py  test_embedding_dim_override.py  test_embedding_openrouter.py  test_embedding_partial_batch.py  test_embedding_response_robustness.py  test_error_codes.py  test_events.py  test_format.py  test_frontmatter.py  test_gemini_thinking_config.py  test_git_lock_retry.py  test_import_lock.py  test_indexer_stale_row_cleanup.py  test_kb_ref_validation.py  test_lazy_reindex_cooldown.py  test_legacy_fulltext_extraction.py  test_linker_edges_dedup.py  test_malloc_trim_cadence.py  test_migrate_chapters.py  test_migrate_slugs.py  test_no_auto_archive.py  test_note_kind_compat.py  test_paths.py  test_preflight_cmd.py  test_provider_client_reuse.py  (+22 more)
