[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-core"
version = "0.29.1"
description = "Shared contract layer (paths, workspace resolution, schema version) for the ee-kb toolchain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ee-kb" }]
keywords = ["knowledge-base", "ee-kb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
# NO runtime deps. kb_core is the bottom of the dependency stack —
# other packages depend on it, not the other way round.
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/kb_core"]

[tool.hatch.build.targets.sdist]
include = ["src/kb_core", "README.md", "pyproject.toml"]
