[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-write"
version = "1.0.0"
description = "Client-agnostic write layer for the ee-kb knowledge base."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ee-kb" }]
keywords = ["knowledge-base", "zotero", "markdown", "llm", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering",
]
# Deliberately light deps: this package must be usable by local
# agents (Claude Code, opencode, etc.) via shell without pulling in
# the heavy MCP / sqlite-vec / openai stack that kb-mcp carries.
dependencies = [
    "kb-core==1.0.0",
    "python-frontmatter>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
kb-write = "kb_write.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_write"]

# AGENT-WRITE-RULES.md is stored both at the repo root (for humans
# browsing the repo) and inside src/kb_write/ (so importlib.resources
# finds it at runtime, even in editable installs). Keep them in sync
# manually; the copy in src/ is what ships in the wheel.

# 0.29.3: force-include the scaffold yaml templates. They live under
# kb_write/src/kb_write/scaffold/ but match gitignore patterns
# (config_kb_*.yaml) — those patterns are there to catch user-copy
# mistakes from bleeding into the repo, but Hatch's wheel builder
# honours .gitignore by default and was consequently dropping the
# templates from the installed wheel. The symptom: `kb-write init`
# silently skipped config scaffolding post-install, because the
# package-data files it expected weren't there. The force-include
# below tells Hatch "ignore gitignore for these three paths —
# they're legitimate package data, not leaked user config".
[tool.hatch.build.targets.wheel.force-include]
"src/kb_write/scaffold/config_kb_importer.yaml"  = "kb_write/scaffold/config_kb_importer.yaml"
"src/kb_write/scaffold/config_kb_mcp.yaml"       = "kb_write/scaffold/config_kb_mcp.yaml"
"src/kb_write/scaffold/config_kb_citations.yaml" = "kb_write/scaffold/config_kb_citations.yaml"

[tool.hatch.build.targets.sdist]
include = ["src/kb_write", "README.md", "AGENT-WRITE-RULES.md", "pyproject.toml"]

# Same rationale as the wheel force-include above — ensure sdist
# carries the scaffold templates even though they match gitignore.
[tool.hatch.build.targets.sdist.force-include]
"src/kb_write/scaffold/config_kb_importer.yaml"  = "src/kb_write/scaffold/config_kb_importer.yaml"
"src/kb_write/scaffold/config_kb_mcp.yaml"       = "src/kb_write/scaffold/config_kb_mcp.yaml"
"src/kb_write/scaffold/config_kb_citations.yaml" = "src/kb_write/scaffold/config_kb_citations.yaml"
